       ============================================
 Developed and maintained by Matthias Ettrich (ettrich@kde.org)


kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from David Hogan's 9wm, a smart and small
windowmanager written in plain C. There are of course also strong
influences from my experiences with the former kwm.


In 0.10:
--------
  patchlevel 16:
       - fix for "move" via keyboard (pointer warp)
       - autoraise fixes
       - fixed the "kwm needs cpu when dragging windows" bug
       - ontoDesktop also moves the transient windows
       - transient windows cannot be moved onto different desktops
         separately anymore
       - transient windows cannot be iconified separately anymore
       - few smaller fixes

       - cosmectic problem with my pushbuttons fixed
       - sticky cares about transient windows now

       - fix for proxyignore
       - window dragging fixed (problems with some compilers)

  patchlevel 15:
       - transient windows are iconified/deiconified with their parent
         window. They also dissappear for the modules and the Mod1-Tab
         traversal if they were automatically iconified.
       - new commandline option "-nosession" to disable the restoration
         of the previous session.
       - new list entry "proxyignore" in the [session]-group of kwmrc
         to specify WM_COMMANDS that should be ignored
       - fixed the minicli-focus-follow-mouse problem
       - yakb fixed for Stephan, small adaption to new kcc module
          
  patchlevel 14:
       - new keybindings Control-F[1..8] for virtual desktop switching
       - new option "ControlTab=[on,off]" to switch off the Control-Tab
         shortcut.
       - fixed the "last window is iconified and deficonified"-focus-
         follows-mouse-bug
       - fixed the autoraise-over-operations-menu bug 
       - Uwe's fix for the timing problem of the resize animation