@@ -12,6 +12,10 @@ influences from my experiences with the former kwm.
 
 In 0.10:
 --------
+  patchlevel 17:
+       - fixed a serious bug (crashing clients when dragging in 
+         opaque mode)
+
   patchlevel 16:
        - fix for "move" via keyboard (pointer warp)
        - autoraise fixes
